# treelas

./: .appveyor.yml  .gitattributes  .gitignore  .gitmodules  .rustfmt.toml  .travis.yml  CMakeLists.txt  Cargo.toml  ChangeLog.md  LICENSE.md  README.md  appveyor.yml  graphidx.index.html  index.html  pwl.html  search.html  search_index.js  tree_dp.html
.github/workflows/: JuliaCI.yml
ci/: CMakeLists.txt  fix-graphidx-imports  runtests  setup_julia.ps1  test-asan  update-setuppy
cmake/: update-setuppy
cxx/: .clang-format  .dir-locals.el  .tree_12.hpp  bfs.hpp  biadjacent.hpp  children.hpp  cline.cpp  cline.hpp  cline2.cpp  cline3.cpp  cline3.hpp  clip.hpp  clip.html  clip2.cpp  clip2.hpp  cluster.cpp  cluster.hpp  conf.py  config.hpp.in  edges.hpp  event.hpp  event3.hpp  gaplas.hpp  genindex.html  heap.hpp  index.hpp  index.html  index.rst  kruskal_mst.hpp  line.cpp  line.hpp  line_c.cpp  line_c.hpp  line_c2.cpp  line_c2.hpp  line_c3.cpp  line_c3.hpp  line_dp.cpp  line_dp.hpp  line_para.cpp  (+39 more)
cxx/.doctrees/: clip.doctree  environment.pickle  index.doctree
cxx/app/: malloc_vs_new.cpp  traverse.cpp  tree_12x.cpp  tree_12x.hpp  tree_apx.cpp  tree_solve.cpp  treesolve.cpp
cxx/idx/: children.hpp  groupby.hpp  index.hpp  partition.hpp
cxx/line/: deque.hpp  line.cpp  line.hpp  line_c.cpp  line_c.hpp  line_c2.cpp  line_c3.cpp  line_dp.cpp  line_dp.hpp  line_para.cpp  line_para.hpp  line_w.cpp  line_w.hpp
cxx/spanning/: kruskal_mst.hpp  prim_mst.hpp  unionfind.hpp
cxx/std/: queue.hpp
cxx/test/: .dir-locals.el  demo3x7.hpp  doctests.cpp  doctestx.hpp  lemon_throws.hpp  test_biadjacent.cpp  test_children.cpp  test_clip.cpp  test_deque.cpp  test_dual.cpp  test_gaplas.cpp  test_hdf5.cpp  test_kruskal_mst.cpp  test_line.cpp  test_line_dp.cpp  test_line_para.cpp  test_memory_leak.cpp  test_min_cut.cpp  test_partition.cpp  test_postorder.cpp  test_prufer.cpp  test_queue.cpp  test_ref.cpp  test_stack.cpp  test_strtok.cpp  test_timer.cpp  test_tree_12.cpp  test_tree_apx.cpp  test_tree_dp.cpp  test_tree_dp_2.cpp  test_unionfind.cpp  test_vecalloc.cpp  tests.cpp
cxx/utils/: argparser.cpp  compiler.hpp  finite.hpp  hdf5.hpp  hdf5hl.hpp  hex.hpp  minmax.hpp  perm.hpp  plotpwl.hpp  thousand.hpp  timer.hpp
data/: .gitignore  Snakefile  config.yml  degrees.py  extract_times.py  plot_times.py  requirements.txt  tree.mini.h5
data/dimacs10/: .benchmark_childrenidx.py  .gitignore  Snakefile  bz2istream.hpp  check.jl  convert.cpp  convert.jl  convert.py  makefile  unbz2.cpp
data/image/: .gitignore  Snakefile  average.py  decss.py  grid.jl  grid_opt.jl  render_svg.py  show.py
data/random/: Snakefile  densetree.py
data/snap/: .gitignore  Snakefile  convert.jl
data/test/: lines.toml  square.dimacs10  tree.mini.h5  tree0.1.toml  tree0.toml  tree_demo3x7.toml
docs/: .gitignore  Doxyfile  formula.tex  formula_main.tex  graphidx  make.jl  makefile
docs/src/: graphidx.index.md  index.md  pwl.md  queues.md  tree_dp.md
graphidx/: CMakeLists.txt  README.md  bits.html  grid.html  idx.html  index.html  lina.html  mst.html  search.html  search_index.js  stats.html  tree.html
graphidx/docs/: Doxyfile  make.jl  makefile
graphidx/julia/: Project.toml  bits.html  grid.html  idx.html  index.html  lina.html  mst.html  search.html  search_index.js  tree.html
graphidx/python/: idx.cpp  py_np.hpp
graphidx/rust/: Cargo.toml
imgs/: .gitignore
julia/: .gitignore  .test.el  Manifest.toml  Project.toml
julia/src/: TreeLas.jl  broadcast.jl  children.jl  clip.jl  common.jl  cxx.jl  cycle.jl  cyclegap.jl  dp_tree.jl  dual.jl  event.jl  extend_graphidx.jl  gap.jl  gaplas.jl  graphidx.jl  incmat.jl  line_dp.jl  mgt.jl  min_cut.jl  momentum.jl  order.jl  precompile.jl  pwl.jl  queues.jl  stats.jl  tree_dp.jl  tree_dp.old.jl  tree_dp2.jl  treeflow.jl  utils.jl  weights.jl
julia/test/: cycle.jl  cycle_3x7.jl  data.jl  demo3x7.jl  graphviz_cyclas.jl  runtests.jl  square.jl  test_children.jl  test_cxx.jl  test_cycle.jl  test_cyclegap.jl  test_cyclgaplas.jl  test_demo3x7.jl  test_dp_tree.jl  test_dual.jl  test_gap.jl  test_gaplas.jl  test_gaplax.jl  test_incmat.jl  test_lines.jl  test_mgt.jl  test_momentum.jl  test_order.jl  test_queues.jl  test_rotate.jl  test_stats.jl  test_tree0.jl  test_tree_dp.jl  test_tree_dp.old.jl  test_tree_dp2.jl  test_wolfe.jl
python/: .buildinfo  .dir-locals.el  .gitignore  _treelas.cpp  adjidx.cpp  compiler.hpp  genindex.html  gitversion.py  graphidx  idx.cpp  index.html  line.cpp  line.html  objects.inv  order.cpp  py-modindex.html  py_np.hpp  pytest.ini  requirements.txt  search.html  searchindex.js  setup.py  spanning.cpp  tree.cpp  tree.html  weights.hpp
python/conda.recipe/: .gitignore  README.md
python/test/: data.py  line.py  requirements.txt  test_adjidx.py  test_biadjacent.py  test_children.py  test_cluster.py  test_compiler.py  test_condat.py  test_deque.py  test_dual.py  test_float.py  test_gamma.py  test_glmgen.py  test_graphviz.py  test_hdf5.py  test_lca.py  test_line.py  test_line_c.py  test_line_para.py  test_linelas.py  test_lines0.py  test_mangle.py  test_minih5.py  test_numba.py  test_partition.py  test_pointer.py  test_postorder.py  test_prufer.py  test_pychildren.py  test_randomspan.py  test_retain.py  test_root.py  test_rust.py  test_sort.py  test_spanning.py  test_timer.py  test_toml.py  test_tree.py  test_tree0.py  (+4 more)
python/treelas/: __init__.py  _toml.py  adjidx.py  bfs.py  children.py  graphidx  graphio.py  graphviz.py  idx.py  lca.py  linelas.py  prufer.py  queue.py  rounder.py  rust.py  seglas.py  segment.py  timer.py  tree.py  (+2 more)
rust/: Cargo.toml  data
rust/src/: debug.rs  event.rs  float.rs  generics.rs  instance.rs  lib.rs  line.rs  line_32.rs  line_64.rs  line_x.rs  mpfr.rs  pwl.rs  pwl_32.rs  stats.rs  tree.rs
rust/tests/: instance.rs  line.rs  line_32.rs  line_64.rs  test_toml.rs
rust/tests/instance/: mod.rs
test/: .dir-locals.el  path.hpp  test_hdf5.cpp  test_line.cpp  test_postorder.cpp  test_prufer.cpp  test_queue.cpp  test_ref.cpp  test_stack.cpp  test_strtok.cpp  test_timer.cpp  test_tree_12.cpp  test_tree_dp.cpp
(+135 files in other folders)
