[package]
name = "treelars"
version = "0.15.1"
authors = ["Elias Kuthe <elias.kuthe@tu-dortmund.de>"]
edition = "2018"
exclude = ["data/*.h5", "data/*.dimacs"]
licence = "MIT"
keywords = ["fused-lasso", "total-variation", "algorithm"]

[dependencies]
graphidx = { git = "https://github.com/EQt/graphidx.git", branch = "develop" }
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
rug = { version = "1.11", optional = true }

[dev-dependencies]
approx = "0.4"

[lib]
crate-type = [
  "cdylib", "rlib", "staticlib"
]

[features]
mpfr = ["rug"]