[package]
name = "treelars"
version = "0.16.0"
authors = ["Elias Kuthe <elias.kuthe@tu-dortmund.de>"]
edition = "2021"
exclude = ["data/*.h5", "data/*.dimacs"]
license = "MIT"
keywords = ["fused-lasso", "total-variation", "algorithm"]

[dependencies]
graphidx = { git = "https://github.com/EQt/graphidx.git", rev = "88772885a" }
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
approx = "0.4"

[lib]
crate-type = [
  "cdylib", "rlib", "staticlib"
]
