[package]
name = "treelars"
version = "0.16.0"
authors = ["Elias Kuthe <elias.kuthe@tu-dortmund.de>"]
edition = "2021"
exclude = ["data/*.h5", "data/*.dimacs"]
license = "MIT"
keywords = ["fused-lasso", "total-variation", "algorithm"]

[dependencies]
graphidx = { git = "https://github.com/EQt/graphidx.git", rev = "25d6593" }

[dev-dependencies]
approx = "0.5"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }

[lib]
crate-type = ["cdylib", "lib"]
